// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchOverviewTab should navigate to ACLs tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
          >
            <div
              class="styledComponents__Wrapper-sc-1abm7iv-13 crtNbp"
            >
              <div
                class="ant-pro-table"
              >
                <div
                  class="ant-pro-card"
                >
                  <div
                    class="ant-pro-card-body"
                    style="padding-top: 0px;"
                  >
                    <div
                      class="ant-pro-table-list-toolbar"
                    >
                      <div
                        class="ant-pro-table-list-toolbar-container"
                      >
                        <div
                          class="ant-pro-table-list-toolbar-left"
                        />
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <div
                                  class="ant-pro-table-list-toolbar-setting-item"
                                >
                                  <svg
                                    data-testid="SettingsOutlined"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-table-wrapper"
                    >
                      <div
                        class="ant-spin-nested-loading"
                      >
                        <div
                          class="ant-spin-container"
                        >
                          <div
                            class="ant-table ant-table-middle ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                          >
                            <div
                              class="ant-table-container"
                            >
                              <div
                                class="ant-table-content"
                                style="overflow-x: auto; overflow-y: hidden;"
                              >
                                <table
                                  style="min-width: 100%; table-layout: auto;"
                                >
                                  <colgroup>
                                    <col />
                                    <col />
                                    <col
                                      style="width: 32px;"
                                    />
                                  </colgroup>
                                  <thead
                                    class="ant-table-thead"
                                  >
                                    <tr>
                                      <th
                                        class="ant-table-cell"
                                      >
                                        ACL Name
                                      </th>
                                      <th
                                        class="ant-table-cell"
                                      >
                                        ACL Type
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                  </thead>
                                  <tbody
                                    class="ant-table-tbody"
                                  >
                                    <tr
                                      aria-hidden="true"
                                      class="ant-table-measure-row"
                                      style="height: 0px; font-size: 0px;"
                                    >
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                    </tr>
                                    <tr
                                      class="ant-table-placeholder"
                                    >
                                      <td
                                        class="ant-table-cell"
                                        colspan="3"
                                      >
                                        <div
                                          class="ant-table-expanded-row-fixed"
                                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                        />
                                      </td>
                                    </tr>
                                  </tbody>
                                </table>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchOverviewTab should navigate to Route Interfaces tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          tabindex="0"
        >
          SwitchOverviewRouteInterfaces
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchOverviewTab should navigate to VLANs tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          tabindex="0"
        >
          SwitchOverviewVLANs
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchOverviewTab should navigate to ports tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          tabindex="0"
        >
          <div
            data-testid="rc-SwitchPortTable"
            title="SwitchPortTable"
          />
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
